--- a/index.html
+++ b/index.html
@@ -56,5 +56,15 @@
 </body>
 
 </html>
-
-
+<!-- 
+<div class="carousel-container">
+  
+  <div class="carousel">
+    <div class="left-button"> < </div>
+    <img src="./assets/carousel/mountains.jpeg" />
+    <img src="./assets/carousel/computer.jpeg" />
+    <img src="./assets/carousel/trees.jpeg" />
+    <img src="./assets/carousel/turntable.jpeg" />
+    <div class="right-button"> > </div>
+  </div>
+  </div> -->
